--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,17 @@
 {
-  "extends": "@jessety"
+  "extends": "@jessety",
+  "overrides": [
+    {
+      "files": ["**/*.mjs"],
+      "parserOptions": { "sourceType": "module" }
+    },
+    {
+      "files": ["**/*.cjs"],
+      "parserOptions": { "sourceType": "script" }
+    },
+    {
+      "files": ["**/*.test.js"],
+      "env": { "jest": true }
+    }
+  ]
 }
