--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Test
+name: test
 
 on: [push]
 
@@ -18,6 +18,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install --loglevel=error
-    - run: npm test
+    - run: npm run test
       env:
         CI: true
