Replace .npmignore with package.json "files"

--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "example": "examples",
     "test": "tests"
   },
+  "files": [
+    "/src"
+  ],
   "scripts": {
     "lint": "eslint . && editorconfig-checker",
     "test": "jest"
