--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,24 +12,25 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 14.x
-      - run: npm install --no-fund --no-audit --loglevel=error
+      - run: npm install
       - run: npm run lint
         env:
           CI: true
 
   test:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     strategy:
       fail-fast: false
       matrix:
-        node: [14.x, 12.x, 10.x]
+        os: [ubuntu-latest, windows-latest]
+        node: [15.x, 14.x, 12.x, 10.x]
     steps:
     - uses: actions/checkout@v2
     - name: Use Node ${{ matrix.node }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node }}
-    - run: npm install --no-fund --no-audit --loglevel=error
+    - run: npm install
     - run: npm run test
       env:
         CI: true
