--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,38 +1,39 @@
 name: publish
 
 on:
+  workflow_dispatch:
   workflow_run:
     workflows: ["release"]
     types:
       - completed
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-      - name: Setup Node
-        uses: actions/setup-node@v2
-        with:
-          node-version: 14.x
-      - name: Install dependencies
-        run: npm install
-      - name: Build project
-        run: npm run build
-      - name: Archive build # https://github.com/actions/upload-artifact#maintaining-file-permissions-and-case-sensitive-files
-        run: tar -czvf lib.tar.gz ./lib
-      - name: Upload build
-        uses: actions/upload-artifact@v2
-        with:
-          name: build
-          path: ./lib.tar.gz
-          retention-days: 1
+#  build:
+#    runs-on: ubuntu-latest
+#    steps:
+#      - name: Checkout
+#        uses: actions/checkout@v2
+#      - name: Setup Node
+#        uses: actions/setup-node@v2
+#        with:
+#          node-version: 14.x
+#      - name: Install dependencies
+#        run: npm install
+#      - name: Build project
+#        run: npm run build
+#      - name: Archive build # https://github.com/actions/upload-artifact#maintaining-file-permissions-and-case-sensitive-files
+#        run: tar -czvf lib.tar.gz ./lib
+#      - name: Upload build
+#        uses: actions/upload-artifact@v2
+#        with:
+#          name: build
+#          path: ./lib.tar.gz
+#          retention-days: 1
 
   # Comment out one of the following jobs to publish to only registry
 
   publish-npm:
-    needs: build
+#    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -42,12 +43,12 @@ jobs:
         with:
           node-version: 14.x
           registry-url: "https://registry.npmjs.org"
-      - name: Download build
-        uses: actions/download-artifact@v2
-        with:
-          name: build
-      - name: Unarchive build
-        run: tar -xzf ./lib.tar.gz
+#      - name: Download build
+#        uses: actions/download-artifact@v2
+#        with:
+#          name: build
+#      - name: Unarchive build
+#        run: tar -xzf ./lib.tar.gz
       - name: Publish
         run: npm publish
         env:
